--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' data: blob: file: local-file: http: https: ws: wss:; script-src 'self' 'unsafe-inline' 'unsafe-eval' blob:; worker-src 'self' blob:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' data: https://fonts.gstatic.com; img-src 'self' data: blob: file: local-file:; media-src 'self' data: blob: file: local-file: https://*.dropboxusercontent.com;" />
-    <title>VJ App</title>
+    <title>sonomika</title>
   </head>
   <body>
     <div id="root"></div>
